# opentelemetry-rust-datadog

./: Cargo.toml  README.md
examples/: simple.rs
examples/tracing/: Cargo.toml
examples/tracing/src/: main.rs
src/: lib.rs  propagation.rs  uploader.rs
src/model/: span.rs
