[package]
name = "opentelemetry-datadog"
version = "0.1.0"
authors = ["Sam Schlegel <git@lutin.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
opentelemetry = { version = "0.4", default_features = false, features = ["trace"] }
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["blocking", "macros", "rt-threaded", "sync"] }
tracing = "0.1"
typed-builder = "0.5"
